--- a/sam/app/src/main/res/layout/activity_login.xml
+++ b/sam/app/src/main/res/layout/activity_login.xml
@@ -9,4 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.teamtreehouse.oslist.Login">
 
+    <include layout="@layout/content_login" />
+
 </RelativeLayout>
