--- a/sam/app/src/main/res/layout/activity_register.xml
+++ b/sam/app/src/main/res/layout/activity_register.xml
@@ -9,4 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.teamtreehouse.oslist.Register">
 
+    <include layout="@layout/content_register" />
+
 </RelativeLayout>
