--- a/sam/app/src/main/res/layout/content_login.xml
+++ b/sam/app/src/main/res/layout/content_login.xml
@@ -10,7 +10,6 @@
         android:src="@drawable/sam" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -20,8 +19,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="155dp"
         android:orientation="vertical"
-        android:padding="10dp"
-        tools:context="com.hci.sam.Login">
+        android:padding="10dp">
 
         <EditText
             android:id="@+id/etUsername"
