--- a/sam/app/src/main/res/layout/activity_main.xml
+++ b/sam/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,13 @@
 
     <!-- The first child in the layout is for the main Activity UI-->
     <RelativeLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffffffff"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context=".MainActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:gravity="center"
-            android:text="Holy Operating Systems, Batdroid!"
-            android:textSize="24sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/batdroid" />
+        <include layout="@layout/content_map" />
 
     </RelativeLayout>
 
