--- a/sam/app/src/main/res/layout/activity_main.xml
+++ b/sam/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,28 @@
 
     </RelativeLayout>
 
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_directions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@android:drawable/ic_menu_directions" />
+
+        <!--<android.support.design.widget.FloatingActionButton android:id="@+id/fab_location"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="80dp"
+            android:layout_marginRight="16dp"
+            android:src="@android:drawable/ic_menu_mylocation" />-->
+
+    </android.support.design.widget.CoordinatorLayout>
+
     <!-- Side navigation drawer UI -->
     <ListView
         android:id="@+id/navList"
