--- a/sam/app/src/main/res/layout/activity_main.xml
+++ b/sam/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:tag="main">
 
     <!-- The first child in the layout is for the main Activity UI-->
     <RelativeLayout
