--- a/sam/app/src/main/res/layout/content_map.xml
+++ b/sam/app/src/main/res/layout/content_map.xml
@@ -7,7 +7,8 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:tag="map" />
 
     <LinearLayout
         android:layout_width="320dp"
