--- a/sam/app/src/main/res/layout/activity_login.xml
+++ b/sam/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.teamtreehouse.oslist.Login">
+    tools:context="com.tuks.sam.Login">
 
     <include layout="@layout/content_login" />
 
