--- a/sam/app/src/main/res/layout/activity_register.xml
+++ b/sam/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.teamtreehouse.oslist.Register">
+    tools:context="com.tuks.sam..Register">
 
     <include layout="@layout/content_register" />
 
