--- a/sam/app/src/main/res/layout/fragment_inventory.xml
+++ b/sam/app/src/main/res/layout/fragment_inventory.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eeeeee"
-    tools:context="com.teamtreehouse.oslist.InventoryFragment">
+    tools:context="com.tuks.sam.InventoryFragment">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
