--- a/sam/app/src/main/res/layout/fragment_item_grid.xml
+++ b/sam/app/src/main/res/layout/fragment_item_grid.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.teamtreehouse.oslist.ItemFragment">
+    tools:context="com.tuks.sam.ItemFragment">
 
     <GridView
         android:id="@android:id/list"
